--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -17,25 +17,44 @@ a:hover{color:#ffbd59; }
 .jumbotron{
     padding:1rem 2rem;
 }
+.fa-star{
+  color: #f9a825;
+}
+.pull-right{float: right;}
+.pull-left{float: left;}
+
 
 /* End of styling Shared */
 
 
 /* Styling the Dashboard page */
+.class1{
+  background: #e57373;
+}
+
+.class2{
+  background: #03a9f4;
+}
+
+.class3{
+  background: #66bb6a;
+}
+
 .w3-left{
   margin-right: 3%;
 }
-.bg-danger{
-  margin: 10%;
-}
 
-.bg-purple{
-  margin: 10%;
-  background-color: #9c27b0;
+.bg-class1{
+  margin: 5%;
+  background-color: #af4448;
 }
-
-.bg-warning{
-  margin: 10%;
+.bg-class2{
+  margin: 5%;
+  background-color: #007ac1;
+}
+.bg-class3{
+  margin: 5%;
+  background-color: #338a3e;
 }
 
 .fa-edit{
@@ -150,9 +169,6 @@ input[type="submit"].login:hover{background-color: #fff; border:1px solid #29007
 input[type="submit"].login:focus{outline: none;}
 
 
-.pull-right{float: right;}
-.pull-left{float: left;}
-
 div.logo{text-align: center; margin: 20px 20px 30px 20px; fill: #566375;}
 div.logo img{
   width:100%;
@@ -201,24 +217,27 @@ div#formAdd{
   background-color: #fff;
   margin:auto;
   border-radius: 3%;
-  padding:3%;
+  padding-top: 1%;
   left:35%;
   top:40%;
   margin-bottom:10px;
   margin-top:-15%;
 }
 
+.slider-label{
+font-family:'Raleway','Arial', sans-serif;
+}
+
 .slider {
   -webkit-appearance: none;
-  width: 95%;
+  width: 100%;
   height: 15px;
   border-radius: 5px;
   background: #d3d3d3;
   outline: none;
   opacity: 0.7;
-  /* -webkit-transition: .2s;
-  transition: opacity .2s; */
-  animate: 0.2s;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
 }
 
 .slider::-webkit-slider-thumb {
@@ -227,7 +246,8 @@ div#formAdd{
   width: 25px;
   height: 25px;
   border-radius: 50%;
-  background: #4CAF50;
+  background: #002171;
+  /* #4CAF50 */
   cursor: pointer;
 }
 
@@ -239,9 +259,47 @@ div#formAdd{
   cursor: pointer;
 }
 
-.slider-label{
-
+input.form-control-add-title{
+  color:#8a8a8a;
+  display: block;
+  width: 95%;
+  height: 100%;
+  padding: 3% 5%;
+  border:1px solid #f1f0f0;
+  -moz-border-radius: 27px;
+  -webkit-border-radius: 27px;
+  border-radius: 11px;
+  margin-bottom: -5%;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+  background-color: #fff;
+  font-family:'Raleway','Arial', sans-serif;
+  font-size: 105%;
+  letter-spacing: .8px;
 }
+input.form-control-add-desc{
+  color:#8a8a8a;
+  display: block;
+  width: 95%;
+  height: 100px;
+  padding: 3% 5%;
+  border:1px solid #f1f0f0;
+  -moz-border-radius: 27px;
+  -webkit-border-radius: 27px;
+  border-radius: 11px;
+  margin-bottom: -3%;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+  font-family:'Raleway','Arial', sans-serif;
+  background-color: #fff;
+  font-size: 105%;
+  letter-spacing: .8px;
+}
+
+div.form-group-add-title .form-style:focus{outline: inherit; border:1px solid #58bff6; color:#58bff6; }
+div.form-group-add-desc .form-style:focus{outline: inherit; border:1px solid #58bff6; color:#58bff6; }
 /* End of styling Add page  */
 
 /* Styling the Sidenav page */
@@ -253,11 +311,10 @@ div#formAdd{
 }
 
 .example-sidenav {
-  background-color: #290074;
+  background-color: #000051;
 }
 .active{
-  background-color:rgba(221,221,221,0.6);
-  color:white;
+  background-color:rgba(221,221,221,0.5);
 }
 
 .sidenav-item{
