--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,5 +4,5 @@
 </mat-card>
 
 <mat-card *ngIf="!currentUser">
-  <button mat-raised-button [routerLink]="['/login']">Login</button>
+  <button mat-raised-button [routerLink]="['/info']">Login</button>
 </mat-card>
