--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -20,21 +20,21 @@
       <div class="form-group">
         <label class="slider-label" name="gravidade">Gravidade: {{atividade.gravidade}}. {{gravidadeLabel}}</label>
         <div class="form-group slider">
-          <input type="range" class="slider" min="1" max="5" value="1" [(ngModel)]="gravidade" name="atividade.gravidade" (input)="handleScore(); HandleGravidadeLabel()">
+          <input type="range" class="slider" min="1" max="5" value="1" [(ngModel)]="gravidade" name="gravidade" (input)="handleScore(); handleGravidadeLabel()">
         </div>
       </div>
 
       <div class="form-group">
         <label class="slider-label" name="gravidade">Urgencia: {{atividade.urgencia}}. {{urgenciaLabel}}</label>
         <div class="form-group slider">
-          <input type="range" class="slider" min="1" max="5" value="1" [(ngModel)]="atividade.urgencia" name="urgencia" (input)="handleScore(); HandleUrgenciaLabel()">
+          <input type="range" class="slider" min="1" max="5" value="1" [(ngModel)]="urgencia" name="urgencia" (input)="handleScore(); handleUrgenciaLabel()">
         </div>
       </div>
 
       <div class="form-group">
         <label class="slider-label" name="tendencia">Tendencia: {{atividade.tendencia}}. {{tendenciaLabel}}</label>
         <div class="form-group slider">
-          <input type="range" class="slider" min="1" max="5" value="1" [(ngModel)]="atividade.tendencia" name="tendencia" (input)="handleScore(); HandleTendenciaLabel()">
+          <input type="range" class="slider" min="1" max="5" value="1" [(ngModel)]="tendencia" name="tendencia" (input)="handleScore(); handleTendenciaLabel()">
         </div>
       </div>
 
@@ -44,50 +44,14 @@
 
       <div class="form-group">
         <a class="pull-left" routerLink="/painel"><small>Cancelar</small></a>
-        <a class="pull-left" *ngIf="atividade.id" (click)="remove(atividade.id)"><i class="fa fa-trash" aria-hidden="true"></i></a>
-        <a class="pull-left" *ngIf="atividade.id" (click)="complete(atividade.id)"><i class="fa fa-check" aria-hidden="true"></i></a>
       </div>
       <div class="form-group">
         <!-- <input type="submit" class="register pull-right" value="Adicionar"> -->
-        <a class="pull-right" (click)="save(atividadeform.value)"><i class="fa fa-plus" aria-hidden="true"></i></a>
+        <a routerLink="/painel" class="pull-right icon-edit" (click)="save(atividadeform.value)" label="salvar"><i class="fa fa-plus fa-2x" aria-hidden="true"></i></a>
+        <a routerLink="/painel" class="pull-right icon-edit" *ngIf="atividade.id" (click)="remove(atividade.id)" label="remover"><i class="fa fa-trash fa-2x" aria-hidden="true"></i></a>
+        <a routerLink="/painel" class="pull-right icon-edit" *ngIf="atividade.id" (click)="complete(atividade.id)" label="completar"><i class="fa fa-check fa-2x" aria-hidden="true"></i></a>
+
       </div>
-      <!-- <button mat-raised-button color="secondary" (click)="remove(atividade.id)"
-      *ngIf="atividade.id" type="button">Delete</button>
-      <button mat-raised-button color="secondary" (click)="complete(atividade.id)"
-      *ngIf="atividade.id" type="button">Complete</button> -->
     </mat-card>
   </form>
 </div>
-<!--
-</div>
-<mat-card-content>
-<input type="hidden" name="id" [(ngModel)]="atividade.id">
-<mat-form-field>
-<input matInput [(ngModel)]="atividade.titulo" required name="titulo" #titulo>
-</mat-form-field>
-<mat-form-field>
-<input matInput [(ngModel)]="atividade.descricao" required name="descricao" #descricao>
-</mat-form-field>
-<mat-form-field>
-<input matInput [(ngModel)]="atividade.gravidade" required name="gravidade" #gravidade>
-</mat-form-field>
-<mat-form-field>
-<input matInput [(ngModel)]="atividade.urgencia" required name="urgencia" #urgencia>
-</mat-form-field>
-<mat-form-field>
-<input matInput [(ngModel)]="atividade.tendencia" required name="tendencia" #tendencia>
-</mat-form-field>
-<mat-form-field>
-<input matInput [(ngModel)]="atividade.score" required name="score" #score>
-</mat-form-field>
-</mat-card-content>
-<mat-card-actions>
-<button mat-raised-button color="primary" type="submit">Save</button>
-<button mat-raised-button color="secondary" (click)="remove(atividade.id)"
-*ngIf="atividade.id" type="button">Delete</button>
-<button mat-raised-button color="secondary" (click)="complete(atividade.id)"
-*ngIf="atividade.id" type="button">Complete</button>
-<a mat-button routerLink="/painel">Cancel</a>
-</mat-card-actions>
-</form>
-</mat-card> -->
