--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,5 @@
 /* Shared */
-html,body,h1,h2,h4,h5 {font-family: "Raleway", sans-serif; line-height: 1.85;}
+html,body,h1,h2,h4,h5 {font-family: "Raleway", sans-serif; line-height: 2.05;}
 h3 {font-family: "Raleway", sans-serif; line-height: 2.5;}
 
 .icon{
@@ -9,13 +9,8 @@ a{color:#290074;text-decoration: none;}
 a:hover{color:#ffbd59; }
 
 
-.footer {
-  position:absolute;
-  bottom:0;
-  width:100%;
-}
 .jumbotron{
-  padding:1rem 2rem;
+  padding:0rem 0rem 0rem 0rem;
 }
 .fa-star{
   color: #f9a825;
@@ -23,7 +18,13 @@ a:hover{color:#ffbd59; }
 .pull-right{float: right;}
 .pull-left{float: left;}
 
+/* footer {
+  position: absolute;
+  bottom: 0%;
+  width: 100%;
+  height: 50px;
 
+} */
 /* End of styling Shared */
 
 
@@ -85,6 +86,25 @@ a:hover{color:#ffbd59; }
 }
 /* End of styling Dashboard page */
 
+/* Styling the Info page */
+
+div#formInfo{
+  position: absolute;
+  width:100%;
+  height:auto;
+  background-color: rgba(41,0,116,0.5);
+  /* rgba(41,0,116,0.8) #290074*/
+  margin:auto;
+  padding:2%;
+  top:96%;
+  margin-top:-20%;
+  font-family: 'Raleway', sans-serif;
+  /* 'Lucida Sans Unicode', 'Lucida Grande', sans-serif; */
+  color: white;
+  font-size: 120%;
+}
+
+/* End of styling Info page */
 
 /* Styling the login page  */
 div#divLogin{
@@ -93,11 +113,11 @@ div#divLogin{
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  font-family:'Raleway','Arial', sans-serif;
+  font-family:'Raleway', sans-serif;
 }
 
 #divLogin{
-  background: rgba(0,0,0,.2);
+  background: rgba(0,0,0,.3);
   width:100%;
   height:100%;
   position: absolute;
@@ -136,7 +156,7 @@ div#divLogin{
     -webkit-background-clip: padding-box;
     background-clip: padding-box;
     background-color: #fff;
-    font-family:'Raleway','Arial', sans-serif;
+    font-family:'Raleway', sans-serif;
     font-size: 105%;
     letter-spacing: .8px;
   }
@@ -169,7 +189,7 @@ div#divLogin{
     input[type="submit"].login:focus{outline: none;}
 
 
-    div.logo{text-align: center; margin: 20px 20px 30px 20px; fill: #566375;}
+    div.logo{text-align: center;fill: #566375;}
     div.logo img{
       width:100%;
       height:100%;
