--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <!-- Navbar (sit on top) -->
 <mat-sidenav-container fullscreen>
-  <div class="w3-bar w3-light-grey w3-padding w3-card" style="letter-spacing:4px;" *ngIf="!currentUser">
-    <a routerLink="/" class="w3-bar-item">ALUAS</a>
+  <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;" *ngIf="!currentUser">
+    <a routerLink="/" class="w3-bar-item"></a>
     <!-- Right-sided navbar links. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
-      <a routerLink="/login" class="w3-bar-item"><i class="fa fa-sign-in" aria-hidden="true"></i>ENTRAR</a>
+      <a routerLink="/login" class="w3-bar-item"><i class="fa fa-sign-in" aria-hidden="true"></i></a>
     </div>
   </div>
 
@@ -12,8 +12,8 @@
     <a routerLink="/" class="w3-bar-item">ALUAS</a>
     <!-- Right-sided navbar links. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
-      <a routerLink="/add" class="w3-bar-item"><i class="fa fa-plus" aria-hidden="true"></i> ADICIONAR</a>
-      <a routerLink="/" (click)="logout()" class="w3-bar-item"><i class="fa fa-sign-out" aria-hidden="true"></i> SAIR</a>
+      <a routerLink="/add" class="w3-bar-item"><i class="fa fa-plus" aria-hidden="true"></i></a>
+      <a routerLink="/" (click)="logout()" class="w3-bar-item"><i class="fa fa-sign-out" aria-hidden="true"></i></a>
     </div>
   </div>
 
@@ -22,7 +22,7 @@
     (mouseleave)="handleDecrease()" *ngIf="currentUser">
 
     <mat-nav-list>
-      <mat-list-item routerLink="['#']" routerLinkActive="active" >
+      <mat-list-item routerLink="/profile" routerLinkActive="active" >
         <i class="fa fa-user icon" aria-hidden="true"></i>
         <div fxFlex="10"></div>
         <div *ngIf="sidenavWidth > 6" class="sidenav-item">
@@ -46,7 +46,7 @@
         </div>
       </mat-list-item>
 
-      <mat-list-item routerLink="['#']" routerLinkActive="active" >
+      <mat-list-item routerLink="/help" routerLinkActive="active" >
         <i class="fa fa-question icon" aria-hidden="true"></i>
         <div fxFlex="10"></div>
         <div *ngIf="sidenavWidth > 6" class="sidenav-item">
@@ -64,7 +64,7 @@
 
 <!-- credits -->
 <!-- Footer -->
-<footer class="w3-center  w3-light-grey w3-padding-32">
-  <p>Powered by <a href="aluas.com.br" title="ALUAS" target="_blank" class="w3-hover-text-green">ALUAS</a></p>
+<footer class="w3-container w3-padding-16 w3-center w3-opacity w3-light-grey" *ngIf="currentUser">
+  <p>Powered by <a href="aluas.com.br" title="ALUAS" target="_blank" class="w3-hover-text-yellow">ALUAS</a></p>
 </footer>
 </mat-sidenav-container>
