--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -1,37 +1,42 @@
-<div class="w3-light-grey" ng-app="aluasapp" style="max-width:2000px;margin-top:46px">
-  <div class="mySlides w3-display-container w3-center w3-white">
-    <img src="./assets/logo.png" style="width:40%" >
-  </div>
+<img class="w3-image" src="../assets/main.png" alt="Aluas" width="1500" height="700">
 
-  <!-- The about Section -->
-  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="about">
-    <h2 class="w3-wide">Quem somos?</h2>
-    <p class="w3-opacity">Temos 24 horas no nosso dia e cada uma conta!</p>
-    <p class="w3-center">Criamos um aplicação capaz de nos auxiliar no gerenciamento e priorização das atividades sem complicação.</p>
-  </div>
+<div id="formInfo">
+  <div id="divInfo">
 
-
-  <!-- The Contact Section -->
-  <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="contact">
-    <h2 class="w3-wide w3-center">Contato</h2>
-    <p class="w3-opacity w3-center">Achou legal? Nos envie uma mensagem!</p>
-    <div class="w3-col m6 w3-large w3-margin-bottom">
-      <i class="fa fa-map-marker" style="width:30px"></i> Brasil, SP<br>
-      <i class="fa fa-envelope" style="width:30px"> </i> Email: suporte@aluas.com<br>
-    </div>
-    <div class="w3-col m6">
-      <form action="/action_page.php" target="_blank">
-        <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
-          <div class="w3-half">
-            <input class="w3-input w3-border" type="text" placeholder="Nome" required name="Name">
-          </div>
-          <div class="w3-half">
-            <input class="w3-input w3-border" type="text" placeholder="Email" required name="Email">
-          </div>
+    <!-- The about Section -->
+    <div class="w3-center" style="max-width:1200px; padding-left:19%; margin-bottom:11%;">
+      <h2 class="w3-wide">MOTIVAÇÃO</h2>
+      <p class="w3-justify">Acreditamos que 24 horas são suficientes se conserguimos administrar esse recurso tão
+        precioso que é nosso tempo e cada hora conta! Pensando nisso e alinhado com a tecnologia decidimos criar uma aplicação que juntasse a técnica de priorização G.U.T
+        com o conceito de gamification que reforça o hábito de se planejar convertendo os pontos das atividades finalizadas em score! </p>
+        <p class="w3-justify">Criamos o Aluas para auxiliar no gerenciamento e priorização das atividades sem complicação, e com isso é possivel manter o dia a dia mais organizado
+          além de prover uma análise da sua produtividade a cada semana.</p>
         </div>
-        <input class="w3-input w3-border" type="text" placeholder="Mensagem" required name="Message">
-        <button class="w3-button w3-black w3-section w3-right" type="submit">ENVIAR</button>
-      </form>
+
+        <!-- The Contact Section -->
+        <div class="w3-left w3-center" style="max-width:640px; padding-left:19%;">
+          <h2 class="w3-wide">CONTATO</h2>
+          <img src="../assets/angel.png" alt="anjo" style="width:35%;border-radius:64%;margin-top:-2%;">
+          <p>Estamos buscando por um cliente anjo, nos envie uma mensagem!</p>
+          <p><i class="fa fa-map-marker"></i> Brasil, SP | <i class="fa fa-envelope"></i> Email: suporte@aluas.com</p>
+        </div>
+
+        <!-- The Entrepreneur Section -->
+        <div class="w3-right w3-center" style="max-width:600px;padding-right:17%;">
+          <h2 class="w3-wide">ENTREPRENEUR</h2>
+          <!-- <div class="w3-card"> -->
+          <img src="../assets/photo.JPG" alt="Heloa" style="width:29%;border-radius:64%;">
+          <div class="w3-container">
+            <h3 style="margin-top:-2%;">Heloa Silva</h3>
+            <p class="w3-opacity" style="margin-top:-3%;">CEO & Founder</p>
+            <p>Formanda em Ciência da Computação e Desenvolvedora.</p>
+          </div>
+          <!-- </div> -->
+        </div>
+      </div>
     </div>
-  </div>
-</div>
+    <img class="w3-image" src="../assets/footer.png" alt="Aluas" width="1500px" height="700px">
+    <footer class="w3-container w3-padding-16 w3-center w3-opacity w3-light-grey">
+      <p>Powered by <a href="aluas.com.br" title="ALUAS" target="_blank" class="w3-hover-text-yellow">ALUAS</a></p>
+    </footer>
+    <!-- </div> -->
