--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -64,7 +64,7 @@
 
 <!-- credits -->
 <!-- Footer -->
-<footer class="w3-container w3-padding-16 w3-center w3-opacity w3-light-grey" *ngIf="currentUser">
+<!-- <footer class="w3-container w3-padding-16 w3-center w3-opacity w3-light-grey" *ngIf="currentUser">
   <p>Powered by <a href="aluas.com.br" title="ALUAS" target="_blank" class="w3-hover-text-yellow">ALUAS</a></p>
-</footer>
+</footer> -->
 </mat-sidenav-container>
