--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -23,7 +23,7 @@
 
         <!-- The Entrepreneur Section -->
         <div class="w3-right w3-center" style="max-width:600px;padding-right:17%;">
-          <h2 class="w3-wide">ENTREPRENEUR</h2>
+          <h2 class="w3-wide">EMPREENDEDORA</h2>
           <!-- <div class="w3-card"> -->
           <img src="../assets/photo.JPG" alt="Heloa" style="width:29%;border-radius:64%;">
           <div class="w3-container">
