--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,34 +1,50 @@
-<div class="col-md-6 user-container">
-  <h2 class="text-center">Edit User</h2>
-  <form [formGroup]="editForm" (ngSubmit)="onSubmit()">
-    <div class="hidden">
-      <input type="text" formControlName="id" placeholder="id" name="id" class="form-control" id="id">
-    </div>
-    <div class="form-group">
-      <label for="username">User Name:</label>
-      <input type="text" formControlName="username" placeholder="username" name="username" class="form-control" id="username" readonly="true">
-    </div>
+<div class="col-sm-4 offset-sm-4" id="formAdd">
+  <a class="pull-right" routerLink="/painel"><i class="fa fa-times"></i></a>
 
-    <div class="form-group">
-      <label for="firstName">First Name:</label>
-      <input formControlName="firstName" placeholder="First Name" name="firstName" class="form-control" id="firstName">
-    </div>
+  <form #profileForm="ngForm" (ngSubmit)="save(profileForm.value)">
 
-    <div class="form-group">
-      <label for="lastName">Last Name:</label>
-      <input formControlName="lastName" placeholder="Last name" name="lastName" class="form-control" id="lastName">
-    </div>
+    <mat-card>
+      <div class="form-group">
+        <div class="form-group">
+          <input type="text" class="form-control-add-title" name="primeiroNome"
+          id="primeiroNome" placeholder="Nome do Usuario" [(ngModel)]="user.primeiroNome">
+        </div>
+      </div>
 
-    <div class="form-group">
-      <label for="age">Age:</label>
-      <input type="number" formControlName="age" placeholder="age" name="age" class="form-control" id="age">
-    </div>
+      <div class="form-group">
+        <div class="form-group">
+          <input type="text" class="form-control-add-title" name="sobrenome"
+          id="sobrenome" placeholder="sobrenome" [(ngModel)]="user.sobrenome">
+        </div>
+      </div>
 
-    <div class="form-group">
-      <label for="salary">Salary:</label>
-      <input type="number" formControlName="salary" placeholder="salary" name="salary" class="form-control" id="salary">
-    </div>
+      <div class="form-group">
+        <div class="form-group">
+          <input type="text" class="form-control-add-title" name="username"
+          id="username" placeholder="username" [(ngModel)]="user.username">
+        </div>
+      </div>
 
-    <button class="btn btn-success">Update</button>
+      <div class="form-group">
+        <div class="form-group">
+          <input type="text" class="form-control-add-title" name="email"
+          id="email" placeholder="email" [(ngModel)]="user.email">
+        </div>
+      </div>
+
+
+      <div class="form-group">
+        <label class="slider-label"><i class="fa fa-star" aria-hidden="true"></i> Score: {{scoreAcumulado}}</label>
+      </div>
+
+      <div class="form-group">
+        <a class="pull-left" routerLink="/painel"><small>Cancelar</small></a>
+      </div>
+      <div class="form-group">
+        <!-- <input type="submit" class="register pull-right" value="Adicionar"> -->
+        <a routerLink="/painel" class="pull-right icon-edit" (click)="save(profileform.value)" label="salvar"><i class="fa fa-plus fa-2x" aria-hidden="true"></i></a>
+        <a routerLink="/painel" class="pull-right icon-edit" *ngIf="atividade.id" (click)="remove(user.id)" label="remover"><i class="fa fa-trash fa-2x" aria-hidden="true"></i></a>
+      </div>
+    </mat-card>
   </form>
 </div>
