bug edit page fix, wip scoreAcumulado

--- a/src/app/add/add.component.html
+++ b/src/app/add/add.component.html
@@ -46,8 +46,7 @@
       <a class="pull-left" routerLink="/painel"><small>Cancelar</small></a>
     </div>
     <div class="form-group w3-right">
-      <!-- <input type="submit" class="register pull-right" value="Adicionar"> -->
-      <a routerLink="/painel" class="pull-right icon-edit" (click)="add(atividadeform.value)" label="salvar"><i class="fa fa-plus fa-2x" aria-hidden="true"></i></a>
+    <input type="submit" class="register pull-right" value="Adicionar">
     </div>
   </form>
 </mat-card>
