--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -197,7 +197,7 @@ div#divLogin{
     /*  Styling the Register page */
     input[type="submit"].register{
       float:right;
-      width: 180%;
+      /* width: 180%; */
       height: 30px;
       -moz-border-radius: 19px;
       -webkit-border-radius: 19px;
@@ -210,7 +210,7 @@ div#divLogin{
       border:none;
       color: #fff;
       font-weight: bold;
-      margin-right: 43%;
+      /* margin-right: 43%; */
     }
     input[type="submit"].register:hover{background-color: #fff; border:1px solid #290074; color:#290074; cursor:pointer;}
     input[type="submit"].register:focus{outline: none;}
