--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
   </div>
 
   <div class="w3-bar w3-light-grey w3-padding w3-card" style="letter-spacing:4px;" *ngIf="currentUser">
-    <a routerLink="/" class="w3-bar-item">ALUAS</a>
+    <a routerLink="/home" class="w3-bar-item">ALUAS</a>
     <!-- Right-sided navbar links. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
       <a routerLink="/add" class="w3-bar-item"><i class="fa fa-plus" aria-hidden="true"></i></a>
