--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -1,7 +1,6 @@
 <div class="col-sm-4 offset-sm-4" id="formAdd">
-  <a class="pull-right" routerLink="/painel"><i class="fa fa-times"></i></a>
 
-  <form #atividadeForm="ngForm" (ngSubmit)="save(atividadeForm.value)">
+  <form #atividadeForm="ngForm" (ngSubmit)="save()">
 
     <mat-card>
       <div class="form-group">
@@ -46,8 +45,7 @@
         <a class="pull-left" routerLink="/painel"><small>Cancelar</small></a>
       </div>
       <div class="form-group">
-        <!-- <input type="submit" class="register pull-right" value="Adicionar"> -->
-        <a routerLink="/painel" class="pull-right icon-edit" (click)="save(atividadeform.value)" label="salvar"><i class="fa fa-plus fa-2x" aria-hidden="true"></i></a>
+        <input type="submit" class="register pull-right" value="Salvar">
         <a routerLink="/painel" class="pull-right icon-edit" *ngIf="atividade.id" (click)="remove(atividade.id)" label="remover"><i class="fa fa-trash fa-2x" aria-hidden="true"></i></a>
         <a routerLink="/painel" class="pull-right icon-edit" *ngIf="atividade.id" (click)="complete(atividade.id)" label="completar"><i class="fa fa-check fa-2x" aria-hidden="true"></i></a>
 
