--- a/src/app/painel/painel.component.html
+++ b/src/app/painel/painel.component.html
@@ -1,9 +1,9 @@
 <!-- Header title and search box -->
 <!-- <i class="fa fa-dashboard"></i> -->
-<h3><b>Painel de Controle </b></h3>
+<h3 style="padding-left:2%"><b>Painel de Controle </b></h3>
   <!-- End of Header -->
 <!-- Columns with the card listed with priority-->
-<div class="row">
+<div class="row" style="padding-left:2%">
   <div class="panel">
     <div class="w3-container class1">
       <div class="w3-left"><i class="fa fa-exclamation-triangle w3-xxxlarge"></i></div>
